--- a/static/files/Work-CV_clara-stafford.tex
+++ b/static/files/Work-CV_clara-stafford.tex
@@ -33,7 +33,7 @@
 \cvjobtitle{PhD Student} % Job title/career
 
 \cvdate{} % Date of birth
-\cvaddress{Brain and Mind Institute, WIRB, Western University, ON, Canada} % Short address/location, use \newline if more than 1 line is required
+\cvaddress{} % Short address/location, use \newline if more than 1 line is required
 \cvnumberphone{548-888-1993} % Phone number
 \cvsite{clarastafford.netlify.com} % Personal website
 \cvmail{cas4077@gmail.com} % Email address
@@ -46,7 +46,7 @@
 %	 ABOUT ME
 %----------------------------------------------------------------------------------------
 
-\aboutme{I am a PhD Student in Behavioural and Cognitive Sciences at the University of Western Ontario. I have extensive hands-on experience designing online reasearch studies, using paltforms such as Qualtrics and MTurk. I have taken all graduate statistics courses available in the Department of Psychology at Western University, including Strucutural Equation Modeling and Latent Variable Modeling. My current dissertation projects focus on the psychometric evaluation of cognitive tests used to assess cognition after concussion. I import, clean and analyze my data using RStudio.} % To have no About Me section, just remove all the text and leave \aboutme{}
+\aboutme{I am a PhD Student inSocial, Personality and Developmental Psychology Program at the University of Western Ontario. I have extensive hands-on experience designing online reasearch studies, using paltforms such as Qualtrics and MTurk. I have taken all graduate statistics courses available in the Department of Psychology at Western University, including Strucutural Equation Modeling and Latent Variable Modeling. My current dissertation projects focus on the psychometric evaluation of cognitive tests used to assess cognition after concussion. I import, clean and analyze my data using RStudio.} % To have no About Me section, just remove all the text and leave \aboutme{}
 
 %----------------------------------------------------------------------------------------
 %	 SKILLS
@@ -70,7 +70,7 @@
 
 \section{Interests}
 
-My main interests include research design and methods and statistical programming. I have hands-on experience with Principal Components Analysis, Strucutural Equation Modeling and Item Response Theory using R.
+My main interests include research design and methods and statistical programming. I have hands-on experience with General Linear Modeling, Classical Test Theory,  Strucutural Equation Modeling and Item Response Theory using R.
 
 %----------------------------------------------------------------------------------------
 %	 EDUCATION
@@ -79,7 +79,7 @@ My main interests include research design and methods and statistical programmin
 \section{Education}
 
 \begin{twenty} % Environment for a list with descriptions
-	\twentyitem{since 2017}{Ph.D. {\normalfont student in Psychology}}{Western University}{\emph{Supervisor: Dr. Adrian Owen}}
+	\twentyitem{since 2017}{Ph.D. {\normalfont student in Psychology}}{Western University}{\emph{Supervisor: Dr. Paul F. Tremblay}}
 	\twentyitem{2015-2017}{M.Sc. Psychology}{Western University}{\emph{A Diffusion Tensor Imaging Study of Motor Fibre Path Integrity and Overt Responsiveness in Disorders of Consciousness}}
 	\twentyitem{2012-2015}{B.A. Psychology}{McGill University}{\emph{Cortico-Cortical Connections of Areas 9 and 8B in the Macaque Monkey}}
 	\twentyitem{2010-2012}{D.E.C}{Champlain College}{Specializing in Psychology}
@@ -93,7 +93,7 @@ My main interests include research design and methods and statistical programmin
 \section{Experience}
 
 \begin{twenty} % Environment for a list with descriptions
-	\twentyitem{since 2018}{Junior Social Sciences Research Analyst}{Human Resource Systems Group}{Worked on the Department of National Defense project and Citizenship and Immigration Canada project}
+	\twentyitem{since 2018}{Junior Social Sciences Research Analyst}{Human Resource Systems Group}{Department of National Defense project and Citizenship and Immigration Canada project}
 	\twentyitem{since 2015}{Graduate Teaching Assistant}{Western University}{Teaching Assistant for honours statistics course.}
 	\twentyitem{2016}{Post-Graduate Research Student}{Unviersity of Birmingham}{\emph{Supervisor: Dr. Davinia Fernandez-Espejo}}
 	\twentyitem{2015}{Research Assistant}{ Western University}{\emph{Supervisor: Dr. Adrian Owen}}
@@ -127,8 +127,6 @@ My main interests include research design and methods and statistical programmin
 	\item \textbf{Stafford, C.A.}, Stojanoski, B., Wild, C. J., Brewer-Deluce, D., Wilson, T. D., \& Owen, A. M. (2020). Concussion related deficits in the general population predict impairments in varsity footballers. \emph{Journal of Neurology}.\newline
 	https://doi.org/10.1007/s00415-020-09749-9.
 	\item \textbf{Stafford, C. A.}, Owen, A. M., \& Fern\'andez-Espejo, D. (2019). The neural basis of external responsiveness in prolonged disorders of consciousness. \emph{NeuroImage: Clinical, 22}, 101791. https://doi.org/10.1016/j.nicl.2019.101791.
-	\item \textbf{Stafford, C. A.}, Tremblay, P. F., Wild, C. J., \& Owen, A. M. (in preparation). Factor structure and measurement invariance of the Cambridge Brain Sciences cognitive battery.
-	\item \textbf{Stafford, C. A.}, Owen, A. M., \& Tremblay, P. F. (in preparation). Taking a person-centered approach to understanding concussion.
 \end{enumerate}
 
 %----------------------------------------------------------------------------------------
@@ -153,18 +151,18 @@ My main interests include research design and methods and statistical programmin
 % CONFERENCES
 %----------------------------------------------------------------------------------------
 
-\section{Conference Activities}
+%\section{Conference Activities}
 
-\subsection{Poster Presentations}
+%\subsection{Poster Presentations}
 
-\begin{enumerate}
-	\item \textbf{Stafford, C. A.}, Stojanoski, B., Wild, C. J., Brewer-Deluce, D., \& Owen, A. M. (2019). The association between a history of self-reported concussion and response inhibition: a population-based study. Poster presented at The American Academy of Neurology Sports Concusison Conference, Indianapolis, IN, USA, July 26th-28th, 2019.
-	\item \textbf{Stafford, C. A.}, Owen, A. M., \& Fern\'andez-Espejo, D. (2019). The neural basis of external responsiveness in prolonged disorders of consciousness. Poster presented at the Association for the Scientific Study of Consciousness, London, ON, CAN, June 25th-28th, 2019.
-	\item \textbf{Stafford, C. A.}, Wild, C. J., Stojanoski, B., \& Owen, A. M. (2018). A large-scale investigation of the relationship between concussion and cognition in the general public. Poster presented at the Rotman Research Institute Conference: Traumatic Brain Injury and Concussion, Toronto, ON, CAN, March 19th-21rst, 2018.
-	\item \textbf{Stafford, C. A.}, Owen, A. M., \& Fern\'andez-Espejo, D. (2016). The relationship between overt responsiveness and white matter abnormalities in patients with disorders of consciousness. Poster presented at the Society for Neuroscience, San Diego, California, USA, Nov. 12th-16th, 2016.
-	\item \textbf{Stafford, C. A.}, Owen, A. M., \& Fern\'andez-Espejo, D. (2016). The role of thalamo-motor fibre damage in overt motor responses in disorders of consciousness. Poster presented at the Canadian Association for Neuroscience, Toronto, ON, CAN, May 29th - June 1, 2016.
-	\item \textbf{Stafford, C. A.}, Gati, J., Owen, A. M., \& Fern\'andez-Espejo, D. (2016). Mapping structural connectivity of thalamic nuclei at ultra-high fields. Poster presented at Lake Ontario Visionary Establishment, Niagara Falls, ON, CAN, Feb. 4th-5th, 2016.
-\end{enumerate}
+%\begin{enumerate}
+%	\item \textbf{Stafford, C. A.}, Stojanoski, B., Wild, C. J., Brewer-Deluce, D., \& Owen, A. M. (2019). The association between a history of self-reported concussion and response inhibition: a population-based study. Poster presented at The American Academy of Neurology Sports Concusison Conference, Indianapolis, IN, USA, July 26th-28th, 2019.
+%	\item \textbf{Stafford, C. A.}, Owen, A. M., \& Fern\'andez-Espejo, D. (2019). The neural basis of external responsiveness in prolonged disorders of consciousness. Poster presented at the Association for the Scientific Study of Consciousness, London, ON, CAN, June 25th-28th, 2019.
+%	\item \textbf{Stafford, C. A.}, Wild, C. J., Stojanoski, B., \& Owen, A. M. (2018). A large-scale investigation of the relationship between concussion and cognition in the general public. Poster presented at the Rotman Research Institute Conference: Traumatic Brain Injury and Concussion, Toronto, ON, CAN, March 19th-21rst, 2018.
+%	\item \textbf{Stafford, C. A.}, Owen, A. M., \& Fern\'andez-Espejo, D. (2016). The relationship between overt responsiveness and white matter abnormalities in patients with disorders of consciousness. Poster presented at the Society for Neuroscience, San Diego, California, USA, Nov. 12th-16th, 2016.
+%	\item \textbf{Stafford, C. A.}, Owen, A. M., \& Fern\'andez-Espejo, D. (2016). The role of thalamo-motor fibre damage in overt motor responses in disorders of consciousness. Poster presented at the Canadian Association for Neuroscience, Toronto, ON, CAN, May 29th - June 1, 2016.
+%	\item \textbf{Stafford, C. A.}, Gati, J., Owen, A. M., \& Fern\'andez-Espejo, D. (2016). Mapping structural connectivity of thalamic nuclei at ultra-high fields. Poster presented at Lake Ontario Visionary Establishment, Niagara Falls, ON, CAN, Feb. 4th-5th, 2016.
+%\end{enumerate}
 
 
 %----------------------------------------------------------------------------------------
