Minor CV updates
Minor CV udpates (making it look more clean and removing AMO references as best I can)

--- a/static/files/Work-CV_clara-stafford.tex
+++ b/static/files/Work-CV_clara-stafford.tex
@@ -46,14 +46,14 @@
 %	 ABOUT ME
 %----------------------------------------------------------------------------------------
 
-\aboutme{I am a PhD Student inSocial, Personality and Developmental Psychology Program at the University of Western Ontario. I have extensive hands-on experience designing online reasearch studies, using paltforms such as Qualtrics and MTurk. I have taken all graduate statistics courses available in the Department of Psychology at Western University, including Strucutural Equation Modeling and Latent Variable Modeling. My current dissertation projects focus on the psychometric evaluation of cognitive tests used to assess cognition after concussion. I import, clean and analyze my data using RStudio.} % To have no About Me section, just remove all the text and leave \aboutme{}
+\aboutme{I am a PhD Student in the Social, Personality and Developmental Psychology Program at the University of Western Ontario. I have extensive hands-on experience designing online reasearch studies, using paltforms such as Qualtrics and MTurk. I have taken all graduate statistics courses available in the Department of Psychology at Western University, including Strucutural Equation Modeling and Latent Variable Modeling. My current dissertation projects focus on the psychometric evaluation of cognitive tests used to assess cognition after concussion. I import, clean, analyze and visualize my data using R.} % To have no About Me section, just remove all the text and leave \aboutme{}
 
 %----------------------------------------------------------------------------------------
 %	 SKILLS
 %----------------------------------------------------------------------------------------
 
 % Skill bar section, each skill must have a value between 0 an 6 (float)
-\skills{{Tableau/1},{SQL/1}, {MPlus/3}, {JASP/4.5}, {{R/RStudio}/4.5},{Statistics and Research/5.5}}
+\skills{{Tableau/1},{SQL/1}, {MPlus/3}, {SPSS/4.5}, {{R/RStudio}/4.5},{Statistics and Research/5.5}}
 
 %-----------------------------------------------------------------------------------------
 
@@ -79,10 +79,10 @@ My main interests include research design and methods and statistical programmin
 \section{Education}
 
 \begin{twenty} % Environment for a list with descriptions
-	\twentyitem{since 2017}{Ph.D. {\normalfont student in Psychology}}{Western University}{\emph{Supervisor: Dr. Paul F. Tremblay}}
-	\twentyitem{2015-2017}{M.Sc. Psychology}{Western University}{\emph{A Diffusion Tensor Imaging Study of Motor Fibre Path Integrity and Overt Responsiveness in Disorders of Consciousness}}
-	\twentyitem{2012-2015}{B.A. Psychology}{McGill University}{\emph{Cortico-Cortical Connections of Areas 9 and 8B in the Macaque Monkey}}
-	\twentyitem{2010-2012}{D.E.C}{Champlain College}{Specializing in Psychology}
+	\twentyitem{since 2017}{Ph.D. Psychology}{Western University}{\emph{Supervisor: Dr. Paul F. Tremblay}}
+	\twentyitem{2015-2017}{M.Sc. Psychology}{Western University}{\emph{}}
+	\twentyitem{2012-2015}{B.A. Psychology}{McGill University}{\emph{}}
+	\twentyitem{2010-2012}{D.E.C}{Champlain College}{Specialization in Psychology}
 	%\twentyitem{<dates>}{<title>}{<location>}{<description>}
 \end{twenty}
 
