--- a/content/post/2020-11-17-posrtfolio-test-2/index.Rmd
+++ b/content/post/2020-11-17-posrtfolio-test-2/index.Rmd
@@ -1,22 +1,22 @@
 ---
-title: 'Test #2'
-author: Clara A. Stafford
+title: 'Portfolio Test #2'
+author: Clara
 date: '2020-11-17'
-slug: test
-categories: []
-tags: ['Test']
+slug: []
+categories:
+  - TidyTuesday
+tags:
+  - Test
 subtitle: ''
 summary: ''
 authors: []
-lastmod: '2020-11-17T15:39:37-05:00'
-featured: yes
+lastmod: '2020-11-17T15:55:26-05:00'
+featured: no
 image:
   caption: ''
   focal_point: ''
   preview_only: no
 projects: []
-output:
-    md_document
 ---
 
 Test
