--- a/content/post/2020-12-23-advent-of-code-day-1/index.Rmd
+++ b/content/post/2020-12-23-advent-of-code-day-1/index.Rmd
@@ -20,10 +20,7 @@ image:
   focal_point: ''
   preview_only: no
 projects: []
-output: 
-  html_document: 
-    highlight: tango
-    theme: yeti
+output: html_document
 ---
 
 # Intro 
