--- a/static/files/Work-CV_clara-stafford.tex
+++ b/static/files/Work-CV_clara-stafford.tex
@@ -53,7 +53,7 @@
 %----------------------------------------------------------------------------------------
 
 % Skill bar section, each skill must have a value between 0 an 6 (float)
-\skills{{Tableau/1},{SQL/1}, {MPlus/3}, {SPSS/4.5}, {{R/RStudio}/4.5},{Statistics and Research/5.5}}
+\skills{{SQL/1}, {MPlus/3}, {SPSS/4.5}, {{R/RStudio}/4.5},{Statistics and Research/5.5}}
 
 %-----------------------------------------------------------------------------------------
 
@@ -108,6 +108,8 @@ My main interests include research design and methods and statistical programmin
 \section{Awards}
 
 \begin{twentyshort} % Environment for a short list with no descriptions
+	\twentyitemshort{2021}{rstudio::global(2021) conference Diversity Scholarship}
+	\twentyitemshort{2020}{London Skating Club Adult Program Assistant of the Year}
 	\twentyitemshort{2020}{G. Keith Humphrey Memorial Award, \$650}
 	\twentyitemshort{2019}{Graduate Student Teaching Award, \$500}
 	\twentyitemshort{2019-2020}{Ontario Graduate Scholarships, \$15,000}
