Updating to more traditional, clean cut CV (i.e. similar to my academic CV)

--- a/static/files/New/Work-CV_clara-stafford.tex
+++ b/static/files/New/Work-CV_clara-stafford.tex
@@ -100,6 +100,7 @@ My main interests include research design and methods and statistical programmin
 \section{Experience}
 
 \begin{twenty} % Environment for a list with descriptions
+	\twentyitem{2021}{User Experience (UX) Research Intern}{Electronic Arts Inc.}{}
 	\twentyitem{since 2018}{Junior Social Sciences Research Analyst}{Human Resource Systems Group}{Department of National Defense project and Citizenship and Immigration Canada project}
 	\twentyitem{since 2015}{Graduate Teaching Assistant}{Western University}{Teaching Assistant for honours statistics course.}
 	\twentyitem{2016}{Post-Graduate Research Student}{Unviersity of Birmingham}{\emph{Supervisor: Dr. Davinia Fernandez-Espejo}}
