--- a/static/files/New2/cas-cv.tex
+++ b/static/files/New2/cas-cv.tex
@@ -25,29 +25,25 @@
 
 
 \begin{document}
-\header{clara}{ stafford}{phd student} % Your name and current job
+\header{Clara}{ Stafford}{PhD Candidate}{548-888-1993}{\href{https://clarastafford.netlify.app/}{clarastafford.netlify.app/}}{\href{mailto:clara.stafford922@gmail.com}{clara.stafford922@gmail.com}} % Your name and current job
 
 %-------------------------------------------------------------------------------
 %	SIDEBAR SECTION
 %-------------------------------------------------------------------------------
 
 \begin{aside} % In the aside, each new line forces a line break
-\section{date of birth}
-\color{gray}1993-05-18
-\section{contact}
-123 Broadway
-City, State 12345
-Country
-~
-548-888-1993
-~
-\href{mailto:clara.stafford922@gmail.com}{clara.stafford922@gmail.com}
-\href{http://www.smith.com}{http://www.smith.com}
+%\section{date of birth}
+%\color{gray}1993-05-18
+%\section{contact}
+%548-888-1993
+%\href{mailto:clara.stafford922@gmail.com}{clara.stafford922@gmail.com}
+%\href{https://clarastafford.netlify.app/}{clarastafford.netlify.app/}
 \section{languages}
 French native spoken, reading, and writing
+~
 English native spoken, reading, and writing
 \section{programming}
-R, MPlus, SPSS \& Python
+R, MPlus, SPSS, JASP \& Python
 \end{aside}
 
 %-------------------------------------------------------------------------------
@@ -62,7 +58,7 @@ R, MPlus, SPSS \& Python
 {2017 \to now}
 {Ph.D}
 {Western University}
-{\emph{Supervisor: Dr. Paul F. Tremblay}}
+{Specialization in Quantitative Psychology}
 %------------------------------------------------
 \entry
 {2015 \to 2017}
@@ -83,10 +79,10 @@ R, MPlus, SPSS \& Python
 \begin{entrylist}
 %------------------------------------------------
 \entry
-{2012 \to now}
-{LEHMAN BROTHERS}
-{Los Angeles, California}
-{\emph{1\textsuperscript{st} Year Analyst} \\
+{May 2021 \to now}
+{Electronic Arts}
+{Montréal, Québec, Canada}
+{\emph{UX Research Co-Op} \\
 Developed spreadsheets for risk analysis on exotic derivatives on a wide array 
 of commodities (ags, oils, precious and base metals), managed blotter and 
 secondary trades on structured notes, liaised with Middle Office, Sales and 
@@ -104,21 +100,28 @@ Detailed achievements:
 \end{itemize}
 \item Coffee spilled inside printer
 \end{itemize}
-\item Broke the office record for number of kitten pictures in cubicle
+\item Nominted for the Learning Award by my team.
 \end{itemize}}
 %------------------------------------------------
 \entry
-{2010 \to 2011}
-{LEHMAN BROTHERS}
-{London, United Kingdom}
-{\emph{Summer Intern} \\
+{2018 \to 2020}
+{Human Resource Systems Group Inc.}
+{Ottawa, Ontario, Canada}
+{\emph{Junior Social Sciences Research Analyst} \\
 Rated "truly distinctive" for Analytical Skills and Teamwork.}
 %------------------------------------------------
 \entry
-{2008 \to 2009}
-{Buy More}
-{Burbank, California}
-{\emph{Computer Repair Specialist} \\
+{2019}
+{Western University}
+{London, Ontario, Canada}
+{\emph{Programmer/Analyst} \\
+Deparment of Statistics and Actuarial Sciences taught SPSS}
+%------------------------------------------------
+\entry
+{2015 \to now}
+{Western University}
+{London, Ontario, Canada}
+{\emph{Graduate Teaching Assistant} \\
 Worked in the Nerd Herd and helped to solve computer problems by asking 
 customers to turn their computers off and on again.}
 %------------------------------------------------
@@ -126,7 +129,7 @@ customers to turn their computers off and on again.}
 
 \clearpage
 
-\smallheader{john}{smith}
+\smallheader{clara}{ stafford}
 
 %-------------------------------------------------------------------------------
 %	AWARDS SECTION
@@ -137,11 +140,46 @@ customers to turn their computers off and on again.}
 \begin{entrylist}
 %------------------------------------------------
 \entry
-{2011}
-{Postgraduate Scholarship}
-{School of Business, The University of California}
+{2021}
+{rstudio::global(2021) Diversity Scholar}
+{RStudio}
 {Awarded to the top student in their final year of a Bachelors degree.}
+%-----------------------------------------------
+\entry
+{2020}
+{Adult Program Assistant of the Year}
+{London Skating Club}
+{Awarded to best adult PA of the year}
 %------------------------------------------------
+\entry
+{2020}
+{G. Keith Humphrey Memorial Award}
+{Western University}
+{Awarded to blah blah nominated by faculty}
+%------------------------------------------------
+\entry
+{2019}
+{Graduate Student Teaching Award}
+{Western University}
+{Awarded to blah blah nominated by students}
+%------------------------------------------------
+\entry
+{2019-2020}
+{Ontario Graduate Scholarship}
+{Western University}
+{Awarded to blah blah}
+%------------------------------------------------
+\entry
+{2016}
+{Reva Gerstein Fellowship for Masters Study in Psychology}
+{Western University}
+{Awarded to MSc students}
+%-----------------------------------------------
+\entry
+{2016}
+{George Hannah Global Opportunities Travel Award}
+{Western University}
+{Awarded to blah blah}
 \end{entrylist}
 
 %-------------------------------------------------------------------------------
@@ -153,17 +191,40 @@ customers to turn their computers off and on again.}
 \begin{entrylist}
 %------------------------------------------------
 \entry
-{2011}
-{Oral Presentation}
-{California Business Conference}
-{Presented the research I conducted for my Masters of Commerce degree.}
+{2019}
+{Conference Poster}
+{The American Academy of Neurology Sports Concussion Conference}
+{\emph{The association between a history of self-reported concussion and response inhibition: a population-based study.}}
 %------------------------------------------------
 \entry
-{2010}
-{Poster}
-{Annual Business Conference, Oregon}
-{As part of the course work for BUS320, I created a poster analyzing several 
-local businesses and presented this at a conference.}
+{2019}
+{Conference Poster}
+{Association for the Scientific Study of Consciousness}
+{\emph{The neural basis of external responsiveness in prolonged disorders of consciousness.}}
+%------------------------------------------------
+\entry
+{2018}
+{Conference Poster}
+{Rotman Research Institute Conference: TBI and Concussion}
+{\emph{A large-scale investigation of the relationship between concussion and cognition in the general public.}}
+%------------------------------------------------
+\entry
+{2016}
+{Conference Poster}
+{Society for Neuroscience}
+{\emph{The relationship between overt responsiveness and white matter abnormalities in patients with disorders of consciousness.}}
+%------------------------------------------------
+\entry
+{2016}
+{Conference Poster}
+{Canadian Association for Neuroscience}
+{\emph{The role of thalamo-motor fibre damage in overt motor responses in disorders of consciousness.}}
+%------------------------------------------------
+\entry
+{2016}
+{Conference Poster}
+{Lake Ontario Visionary Establishment}
+{\emph{Mapping structural connectivity of thalamic nuclei at ultra-high fields.}}
 %------------------------------------------------
 \end{entrylist}
 
@@ -172,7 +233,14 @@ local businesses and presented this at a conference.}
 %-------------------------------------------------------------------------------
 
 \section{publications}
-\bibentry{Near a Raven -- A Critical Review of Poe's Works}{John 
-Smith}{Sprinkler Publishing, New York, 2010}
+%\bibentry{title}{authors}{journal info}{doi}\\
+%------------------------------------------------
+\bibentry{Concussion related deficits in the general population predict impairments in varsity footballers.}{\textbf{Stafford, Clara A.}, Stojanoski, B., Wild, C. J., Brewer-Deluce, D., \& Owen, A. M.}{\emph{Journal of Neurology, 267}, 1970-1979, 2020}{\href{https://doi.org/10.1007/s00415-020-09749-9}{https://doi.org/10.1007/s00415-020-09749-9}}\\
+%-------------------------------------------------
+\bibentry{ The neural basis of external responsiveness in prolonged disorders of consciousness.}{\textbf{Stafford, Clara A.}, Owen, A. M., \& Fernandez-Espejo, D.}{\emph{NeuroImage: Clinical, 22}, 101791, 2019}{\href{https://doi.org/10.1016/j.nicl.2019.101791}{https://doi.org/10.1016/j.nicl.2019.101791}}
+
+%\clearpage
+
+%\smallheader{clara}{ stafford}
 
 \end{document}
